--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h3>Comments</h3>
     <div id='list' class='comments'></div>
 
-    <h3>Leave a comment</h3>
+    <h3 id = "comment-header">Leave a comment</h3>
 
     <form id="comment-form" action="">
       <input type='text' name="comment" id="comment-input" cols="30" rows="10">
