--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <ul class='likes'></ul>
 
   <div>
-    <h3>Comments</h3>
+    <h3 id="comment-header">Comments</h3>
     <div id='list' class='comments'></div>
 
     <h3>Leave a comment</h3>
